@@ -89,6 +89,8 @@ Current development version 3.32-08 (2022-07-04)
 - 08: Bugfix #1037: Inverse "Ignore case" effect on in-/output highlighting <2>
 - 08: Bugfix #1038: Repeated saving questions on recursive execution <2>
 - 08: Bugfix #1040: Defective File API method for Python export [R. Schmidt]2
+- 08: Issue #1041: Incompetent Python export of FINALLY clauses [R. Schmidt]2
+- 08: Bugfix #1042: Wrong Python syntax for CATCH variables [Rolf Schmidt]2 
 
 Version 3.32 (2021-09-19) requiring Java 11 or newer
 - 01: Bugfix #851/2: SPECIAL-NAMES sections caused COBOL parser abort <2>
